<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.home.HomeActivity"
    tools:openDrawer="start">



    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/backgroundhome"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="25dp"
                android:paddingTop="30dp"
                android:paddingRight="25dp">

                <TextView
                    android:id="@+id/t1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="3dp"
                    android:text="@string/welcome_back"
                    android:textColor="#fff"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/email"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/t1"
                    android:layout_margin="3dp"
                    android:fontFamily="sans-serif-black"
                    android:text="@string/email"
                    android:textColor="#fff"
                    android:textSize="20sp" />



                <ImageView
                    android:id="@+id/imgProfile"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:layout_alignParentEnd="true"
                    android:src="@drawable/profile" />

            </RelativeLayout>

            <LinearLayout
                android:layout_width="385dp"
                android:layout_height="200dp"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:orientation="vertical">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    tools:context=".ui.home.HomeActivity">

                    <androidx.viewpager2.widget.ViewPager2
                        android:id="@+id/viewPager_ImageSlider"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:paddingStart="70dp"
                        android:paddingEnd="70dp" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </LinearLayout>

            <LinearLayout
                android:gravity="center"
                android:id="@+id/btnList"
                android:layout_marginTop="40dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
              >

                <androidx.cardview.widget.CardView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_margin="15dp"
                    app:cardBackgroundColor="#ff5d9e"
                    app:cardCornerRadius="15dp"
                    app:cardElevation="10dp">

                    <LinearLayout
                        android:id="@+id/vacay_btn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_margin="20dp"
                        android:gravity="center"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:src="@drawable/holid" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            android:fontFamily="sans-serif"
                            android:text="@string/holiday"
                            android:textColor="#fff"
                            android:textSize="15sp" />

                    </LinearLayout>

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_margin="15dp"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    app:cardBackgroundColor="#ff5d9e"
                    app:cardCornerRadius="15dp"
                    app:cardElevation="10dp">

                    <LinearLayout
                        android:id="@+id/resto_btn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:src="@drawable/ic_baseline_restaurant_menu_24" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            android:fontFamily="sans-serif"
                            android:text="@string/restaurant"
                            android:textColor="#fff"
                            android:textSize="15sp" />


                    </LinearLayout>

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_margin="15dp"
                    app:cardBackgroundColor="#ff5d9e"
                    app:cardCornerRadius="15dp"
                    app:cardElevation="10dp">

                    <LinearLayout
                        android:id="@+id/hotel_btn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:src="@drawable/hotel" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            android:fontFamily="sans-serif"
                            android:text="@string/hotel"
                            android:textColor="#fff"
                            android:textSize="15sp" />

                    </LinearLayout>

                </androidx.cardview.widget.CardView>


            </LinearLayout>


            <LinearLayout
                android:id="@+id/r4"
                android:layout_margin="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
               android:orientation="vertical" >

                <ImageView
                    android:id="@+id/btn_location"
                    android:layout_width="90dp"
                    android:layout_height="90dp"
                    android:background="@drawable/human_footprint"
                    android:backgroundTint="@color/blue"
                    android:contentDescription="@string/todo"
                    android:layout_gravity="center"
                    android:text="@string/log_out"
                    android:textColor="@color/white" />

                <TextView
                    android:layout_gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="15dp"
                    android:fontFamily="@font/raleway_bold"
                    android:gravity="center"
                    android:text="@string/find_your_location"
                    android:textColor="#516b9e"
                    android:textSize="20sp"
                    android:textStyle="bold" />


            </LinearLayout>


        </LinearLayout>
    </ScrollView>
    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"
        app:headerLayout="@layout/nav_header_main"
        app:menu="@menu/activity_main_drawer" />
</androidx.drawerlayout.widget.DrawerLayout>