<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/side_nav_bar"
    android:orientation="vertical"
    tools:context=".ui.auth.RegisterActivity">

    <androidx.cardview.widget.CardView
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_gravity="center"
        android:layout_margin="30dp"
        android:backgroundTint="@color/pink"
        app:cardCornerRadius="30dp"
        app:cardElevation="150dp"
        app:cardMaxElevation="150dp">

        <ImageView
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_gravity="center"
            android:background="@drawable/human_footprint"
            android:backgroundTint="@color/black"
            android:elevation="20dp" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="20dp"
        app:cardCornerRadius="25dp"
        app:cardElevation="50dp"
        app:cardMaxElevation="100dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:fontFamily="@font/raleway_bold"
                android:text="@string/register"
                android:textColor="@color/black"
                android:textSize="25sp" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/username_input_Layout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:elevation="20dp">

                <EditText
                    android:id="@+id/username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints="@string/username"
                    android:background="@color/white"
                    android:elevation="10dp"
                    android:hint="@string/username"
                    android:inputType="text"
                    android:textColor="@color/black"
                    android:textColorHint="@color/black"
                    android:textSize="15sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/email_input_layout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:elevation="20dp">

                <EditText
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints="@string/email"
                    android:background="@color/white"
                    android:elevation="10dp"
                    android:hint="@string/email"
                    android:inputType="text"
                    android:textColor="@color/black"
                    android:textColorHint="@color/black"
                    android:textSize="15sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/password_input_layout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:elevation="20dp">

                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints="@string/passwordtxt"
                    android:background="@color/white"
                    android:elevation="10dp"
                    android:hint="@string/passwordtxt"
                    android:inputType="text"
                    android:textColor="@color/black"
                    android:textColorHint="@color/black"
                    android:textSize="15sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/confirm_password_input_layout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:elevation="20dp">

                <EditText
                    android:id="@+id/confirm_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints="@string/confirm_password"
                    android:background="@color/white"
                    android:elevation="10dp"
                    android:hint="@string/confirm_password"
                    android:inputType="text"
                    android:textColor="@color/black"
                    android:textColorHint="@color/black"
                    android:textSize="15sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/input_phone_number"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:elevation="20dp">

                <EditText
                    android:id="@+id/phone_number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints="@string/phone"
                    android:background="@color/white"
                    android:elevation="10dp"
                    android:hint="@string/phone"
                    android:inputType="text"
                    android:textColor="@color/black"
                    android:textColorHint="@color/black"
                    android:textSize="15sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <androidx.cardview.widget.CardView
                android:layout_width="180dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_margin="8dp"
                android:backgroundTint="@color/pink"
                app:cardCornerRadius="40dp"
                app:cardElevation="50dp"
                app:cardMaxElevation="100dp">

                <Button
                    android:id="@+id/btn_register"
                    android:layout_width="180dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:layout_margin="50dp"
                    android:backgroundTint="@color/pink"
                    android:fontFamily="@font/raleway_bold"
                    android:text="Create Account"
                    android:textAllCaps="false"
                    android:textColor="@color/black" />
            </androidx.cardview.widget.CardView>
        </LinearLayout>


    </androidx.cardview.widget.CardView>
<TextView
    android:id="@+id/goToLogin"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/already_have_sign_in_here"
    android:layout_gravity="center"
    android:textColor="@color/white"
    android:textSize="15sp"/>

</LinearLayout>