<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/side_nav_bar"
    android:orientation="vertical"
    tools:context=".ui.auth.RegisterActivity">
    <androidx.cardview.widget.CardView
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_gravity="center"
        android:layout_margin="30dp"
        android:backgroundTint="@color/blue"
        app:cardCornerRadius="30dp"
        app:cardElevation="150dp"
        app:cardMaxElevation="150dp">
        <ImageView
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_gravity="center"
            android:background="@drawable/human_footprint"
            android:backgroundTint="@color/black"
            android:elevation="20dp" />
    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_gravity="center"
        app:cardCornerRadius="25dp"
        app:cardElevation="50dp"
        app:cardMaxElevation="100dp"
        >
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="8dp"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/register"
                android:fontFamily="@font/raleway_bold"
                android:textSize="25sp"
                android:textColor="@color/black"
                android:layout_gravity="center"
                android:layout_margin="10dp"/>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:id="@+id/username_input_Layout"
                android:elevation="20dp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
                <EditText
                    android:elevation="10dp"
                    android:background="@color/white"
                    android:id="@+id/username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/username"
                    android:textColorHint="@color/black"
                    android:inputType="text"
                    android:textSize="15sp"
                    android:textColor="@color/black"
                    android:autofillHints="@string/username"/>
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:id="@+id/email_input_layout"
                android:elevation="20dp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
                <EditText
                    android:elevation="10dp"
                    android:background="@color/white"
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email"
                    android:textColorHint="@color/black"
                    android:inputType="text"
                    android:textSize="15sp"
                    android:textColor="@color/black"
                    android:autofillHints="@string/email"/>
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:id="@+id/password_input_layout"
                android:elevation="20dp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
                <EditText
                    android:elevation="10dp"
                    android:background="@color/white"
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/passwordtxt"
                    android:textColorHint="@color/black"
                    android:inputType="text"
                    android:textSize="15sp"
                    android:textColor="@color/black"
                    android:autofillHints="@string/passwordtxt"/>
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:id="@+id/confirm_password_input_layout"
                android:elevation="20dp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
                <EditText
                    android:elevation="10dp"
                    android:background="@color/white"
                    android:id="@+id/confirm_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/confirm_password"
                    android:textColorHint="@color/black"
                    android:inputType="text"
                    android:textSize="15sp"
                    android:textColor="@color/black"
                    android:autofillHints="@string/confirm_password"/>
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:id="@+id/input_phone_number"
                android:elevation="20dp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
                <EditText
                    android:elevation="10dp"
                    android:background="@color/white"
                    android:id="@+id/phone_number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/phone"
                    android:textColorHint="@color/black"
                    android:inputType="text"
                    android:textSize="15sp"
                    android:textColor="@color/black"
                    android:autofillHints="@string/phone"/>
            </com.google.android.material.textfield.TextInputLayout>

            <androidx.cardview.widget.CardView
                android:layout_width="180dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_margin="8dp"
                android:backgroundTint="@color/blue"
                app:cardCornerRadius="40dp"
                app:cardElevation="50dp"
                app:cardMaxElevation="100dp">
                <Button
                    android:layout_gravity="center"
                    android:id="@+id/btn_register"
                    android:layout_width="180dp"
                    android:layout_height="50dp"
                    android:layout_margin="50dp"
                    android:textAllCaps="false"
                    android:backgroundTint="@color/blue"
                    android:text="Create Account"
                    android:fontFamily="@font/raleway_bold"
                    android:textColor="@color/black"
                    />
            </androidx.cardview.widget.CardView>
        </LinearLayout>





    </androidx.cardview.widget.CardView>


</LinearLayout>